--- a/css/style.css
+++ b/css/style.css
@@ -1664,3 +1664,50 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
+#advisory .nav-tabs{
+  text-align: center;
+    margin: auto;
+    display: block;
+    border-bottom: 0;
+    margin-bottom: 30px;
+}
+#advisory .nav-tabs li {
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+#advisory .nav-tabs a {
+  border: none;
+  border-radius: 50px;
+  font-weight: 600;
+  background-color: #0e1b4d;
+  color: #fff;
+  padding: 10px 100px;
+}
+
+#advisory .nav-tabs a.active {
+  background-color: #f82249;
+  color: #fff;
+}
+
+#advisory .sub-heading {
+  text-align: center;
+  font-size: 18px;
+  font-style: italic;
+  margin: 0 auto 30px auto;
+}
+
+#advisory .tab-pane {
+  transition: ease-in-out .2s;
+}
+
+#advisory .schedule-item {
+  border-bottom: 1px solid #cad4f6;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  transition: background-color ease-in-out 0.3s;
+}
+
+#advisory .schedule-item:hover {
+  background-color: #fff;
+}
